terraform/swarm-workers.tf
resource "google_compute_instance" "workers" {
  count        = var.swarm_workers
  name         = "worker${count.index + 1}"
  machine_type = var.swarm_workers_instance_type
  zone         = var.zone

  depends_on = [google_compute_instance.managers]

  boot_disk {
    initialize_params {
      image = var.image_name
      size  = 10
    }
  }

  network_interface {
    network       = google_compute_network.swarm.name
    access_config {}
  }

  metadata = {
    ssh-keys = "${var.ssh_user}:${file(var.ssh_pub_key_file)}"
  }

}
